<resources>
    <string name="app_name">Calculator</string>
    <string name="letter0">0</string>
    <string name="letter1">1</string>
    <string name="letter2">2</string>
    <string name="letter3">3</string>
    <string name="letter4">4</string>
    <string name="letter5">5</string>
    <string name="letter6">6</string>
    <string name="letter7">7</string>
    <string name="letter8">8</string>
    <string name="letter9">9</string>
    <string name="operation_plus">+</string>
    <string name="operation_minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="AC">AC</string>
</resources>
